Navbar Stretch Fixed

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 }
 
 .app {
-  height: 200vh;
+  height: max-content;
   width: 100vw;
   position: absolute;
   display: flex;
@@ -17,18 +17,13 @@
 }
 
 .app-header {
-  aspect-ratio: 7 / 6;
+  height: 100vh;
   width: 100vw;
-  background-image: url(assets/Images/bg.webp);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
   display: flex;
   flex-wrap: nowrap;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 66%, rgba(0, 0, 0, 0));
 }
 
 .headertext-container {
@@ -41,29 +36,40 @@
   align-items: center;
 }
 
-#header-name {
+.big-header {
   font-size: 10rem;
 }
 
-#header-profession {
+.regular-header {
   font-size: 5rem;
   width: max-content;
   min-height: 7rem;
 }
 
 @media screen and (max-width: 768px) {
-  #header-name {
+  .big-header {
     font-size: 12vw;
     max-width: 80vw;
   }
 
-  #header-profession {
+  .regular-header {
     font-size: 6vw;
     max-width: 70vw;
   }
 }
 
 .App main {
+  flex: 1;
+  width: 100vw;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  transform: translateY(calc(100vh - 86vw));
+}
+
+.about-me-container {
   height: 100vh;
   width: 100vw;
   display: flex;
@@ -71,4 +77,27 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+}
+
+.about-me-header {
+  margin: 10vh 0px;
+}
+
+.about-me-text-container {
+  width: 100vw;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  /* outline: 3px solid red; */
+}
+
+.about-me-text-header {
+  margin-left: calc(100vw / 3 - 10vw);
+  outline: 3px solid red;
+}
+
+.about-me-text {
+  outline: 3px solid red;
 }
